docs: Updated docs

--- a/docs/latex/event_8h.tex
+++ b/docs/latex/event_8h.tex
@@ -148,7 +148,7 @@ Built-\/in system event codes.
 
 These are reserved for internal engine use. Applications should use custom codes above {\ttfamily MAX\+\_\+\+EVENT\+\_\+\+CODE}. \begin{DoxyEnumFields}{Enumerator}
 \raisebox{\heightof{T}}[0pt][0pt]{\index{EVENT\_CODE\_APPLICATION\_QUIT@{EVENT\_CODE\_APPLICATION\_QUIT}!event.h@{event.h}}\index{event.h@{event.h}!EVENT\_CODE\_APPLICATION\_QUIT@{EVENT\_CODE\_APPLICATION\_QUIT}}}\Hypertarget{event_8h_a6779f338629229430f8974f2f86d7226aebab55ac2635b49a369eaa4c17dc2677}\label{event_8h_a6779f338629229430f8974f2f86d7226aebab55ac2635b49a369eaa4c17dc2677} 
-EVENT\+\_\+\+CODE\+\_\+\+APPLICATION\+\_\+\+QUIT&Application lifecycle. \\
+EVENT\+\_\+\+CODE\+\_\+\+APPLICATION\+\_\+\+QUIT&Shuts the application down on the next frame. \\
 \hline
 
 \raisebox{\heightof{T}}[0pt][0pt]{\index{EVENT\_CODE\_KEY\_PRESSED@{EVENT\_CODE\_KEY\_PRESSED}!event.h@{event.h}}\index{event.h@{event.h}!EVENT\_CODE\_KEY\_PRESSED@{EVENT\_CODE\_KEY\_PRESSED}}}\Hypertarget{event_8h_a6779f338629229430f8974f2f86d7226aaf5d469683c442daf841f01c831344c1}\label{event_8h_a6779f338629229430f8974f2f86d7226aaf5d469683c442daf841f01c831344c1} 
