--- a/docs/latex/structevent__context.tex
+++ b/docs/latex/structevent__context.tex
@@ -28,7 +28,7 @@ union \{\\
 \>char \mbox{\hyperlink{structevent__context_a8deecc49bdb0f49ac7618cc85a87113c}{c}} \mbox{[}16\mbox{]}\\
 \} \mbox{\hyperlink{structevent__context_aa3780aba001ac7d0979a720b8a86a2c3}{data}}\\
 
-\end{tabbing}\begin{DoxyCompactList}\small\item\em Union of primitive data types for passing event information. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{tabbing}\begin{DoxyCompactList}\small\item\em Union of primitive data types for passing event information. Max 128 bytes. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -59,7 +59,7 @@ Definition at line \mbox{\hyperlink{event_8h_source_l00064}{64}} of file \mbox{\
 
 
 
-Union of primitive data types for passing event information. 
+Union of primitive data types for passing event information. Max 128 bytes. 
 
 Use fields appropriately based on the event code. For example\+:
 \begin{DoxyItemize}
